Add footer section

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -15,4 +15,4 @@
 - id: all
   translation: All
 - id: copyright
-  translation: copyright &copy; 2020 [sommos.work](https://sommos.work) all right reservedå
+  translation: 2020 [sommos](https://sommos.work) - all right reserved
