Update footer notice

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -15,4 +15,4 @@
 - id: all
   translation: All
 - id: copyright
-  translation: 2020 [sommos](https://sommos.work) - all right reserved
+  translation: 2020 [sommos](https://sommos.work) - Powered by hugo + Themefisher/meghna + Netlify
