Update copyright note

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -15,4 +15,4 @@
 - id: all
   translation: All
 - id: copyright
-  translation: 2020 [sommos](https://sommos.work) - Powered by hugo + Themefisher/meghna + Netlify
+  translation: 2020 [sommos](https://sommos.work) - Powered by [Hugo](https://gohugo.io/) + [Meghna](https://github.com/themefisher/meghna-hugo) + [Netlify](https://www.netlify.com/)
