--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -14,6 +14,14 @@
   translation: Submit
 - id: all
   translation: All
+- id: about
+  translation: About Us
+- id: family
+  translation: Family
+- id: how
+  translation: How it works
+- id: contact
+  translation: Contacts
 - id: copyright
   translation: "[sommos](https://sommos.work) 2020"
 - id: powered
