Remove typo in menu link

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -21,7 +21,7 @@
 - id: how
   translation: How it works
 - id: contact
-  translation: Contacts
+  translation: Contact
 - id: copyright
   translation: "[sommos](https://sommos.work) 2020"
 - id: powered
